--- a/pom.xml
+++ b/pom.xml
@@ -102,6 +102,14 @@
         </dependency>
 
         <dependency>
+            <groupId>org.triple_brain.module</groupId>
+            <artifactId>triple_brain-model</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+            <classifier>tests</classifier>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
             <groupId>org.neo4j</groupId>
             <artifactId>neo4j-kernel</artifactId>
             <scope>test</scope>
@@ -141,6 +149,15 @@
             <artifactId>guice-assistedinject</artifactId>
             <version>3.0</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.triple_brain.module</groupId>
+            <artifactId>triple_brain-neo4j-graph-manipulator</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+            <classifier>tests</classifier>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 
 </project>
